# officemanagementcontract

./: .gitignore  Cargo.toml
artifacts/: checksums.txt  checksums_intermediate.txt  officemanagement.wasm
src/: contract.rs  error.rs  msg.rs  state.rs
